--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Voyager 2019</title>
+	<title>Voyager 2020
+	</title>
     <link rel="icon" type="image/ico" href="images/title.png" />
 </head>
 <body>
