--- a/techtalk/index.html
+++ b/techtalk/index.html
@@ -68,8 +68,7 @@
     <div id="text">
       <div id="centerText">
         <p class="quote">
-           To be revealed. 
-
+          <b>Ms. Rashi Jaiswal</b><br>Blockchain Engineer at Zebpay.
         </p>
         <p class="quote">
            To be revealed. 
