--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 	<nav class ='navbar navbar-expand-md navbar-dark 
 	bg-dark sticky-top' id='navigation'>
-		<a class= "navbar-brand"><img src = "images/nav.png"></a><br>
+		<a class= "navbar-brand" href="https://ieee.vit.edu.in/"><img src = "images/nav.png"></a><br>
 
 		<button class = "navbar-toggler" data-toggle="collapse" data-target = "#collapse_target">
 			<span class = "navbar-toggler-icon"></span>
