Minor Bug Fixes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 		  <p>
 		    Flagship event of IEEE-VIT.
 		    <br><br>
-		    <a class='btn' href="launch.html"><i class="fa fa-rocket" aria-hidden="true"></i> Launch</a>
+		    Unveiling the events soon!! Stay Tuned.<br><br>
+		    <!--<a class='btn' href="launch.html"><i class="fa fa-rocket" aria-hidden="true"></i> Launch</a>-->
+		    <button type="button" class="btn btn-secondary btn-lg" disabled><i class="fa fa-rocket" aria-hidden="true"></i></button>
 		  </p>		    
 	</div>
 	<div class='solar-syst'>
