--- a/launch.html
+++ b/launch.html
@@ -151,7 +151,7 @@
         class="d-flex flex-wrap align-items-center justify-content-around"
       >
         <div class="card-container card-workshop mt-5">
-          <h1 class="card-heading mt-4 pl-2">Workshops</h1>
+          <!--<h1 class="card-heading mt-4 pl-2">Workshops</h1>-->
           <div class="overlay">
             <div class="items"></div>
             <div class="items head">
@@ -171,7 +171,7 @@
           </div>
         </div>
         <div class="card-container card-competitions mt-5">
-          <h1 class="card-heading mt-4">Competitions</h1>
+          <!--<h1 class="card-heading mt-4">Competitions</h1>-->
           <div class="overlay">
             <div class="items"></div>
             <div class="items head">
@@ -189,7 +189,7 @@
           </div>
         </div>
         <div class="card-container card-funevents mt-5">
-          <h1 class="card-heading mt-4">Fun Events</h1>
+          <!--<h1 class="card-heading mt-4">Fun Events</h1>-->
           <div class="overlay">
             <div class="items"></div>
             <div class="items head">
@@ -207,7 +207,7 @@
           </div>
         </div>
         <div class="card-container card-techTalks mt-5">
-          <h1 class="card-heading mt-4">Tech Talks</h1>
+          <!--<h1 class="card-heading mt-4">Tech Talks</h1>-->
           <div class="overlay">
             <div class="items"></div>
             <div class="items head">
