Changed the logo of competitions

--- a/competitions/main.html
+++ b/competitions/main.html
@@ -162,9 +162,9 @@
 
 	<!-- Copyright -->
 	<div class="footer-copyright text-center text-dark" style="background-color:#323e43; padding-bottom:2rem">
-	  <a href="https://twitter.com/vidyalankarieee?lang=en" class="footer-icon"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-    <a href="https://www.facebook.com/IEEEVIT1" class="footer-icon"><i class="fab fa-facebook" aria-hidden="true"></i></a>
-    <a href="https://www.instagram.com/ieeevit" class="footer-icon"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+	  <a href="https://twitter.com/vidyalankarieee?lang=en" class="footer-icon"><i class="fab fa-twitter fa-xs" aria-hidden="true"></i></a>
+    <a href="https://www.facebook.com/IEEEVIT1" class="footer-icon"><i class="fab fa-facebook fa-xs" aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/ieeevit" class="footer-icon"><i class="fab fa-instagram fa-xs" aria-hidden="true"></i></a>
 <br>
       <p class="mbr-text mb-0 text-light"><br>© Official website developed by the Techweb Team<br>
                 <a style="text-decoration: none;" href="https://iris.vit.edu.in/iris-coc/index.html" class="text-white" target="_blank">CODE OF CONDUCT
