--- a/techtalk/index.html
+++ b/techtalk/index.html
@@ -22,7 +22,7 @@
   <div class="loader-section section-right"></div>
   
 </div>
-  <nav class="navbar navbar-expand-md navbar-dark sticky-top" id="navigation">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top" id="navigation">
 		<a class="navbar-brand" href="https://ieee.vit.edu.in"><img src="https://iris.vit.edu.in/img/nav.png">
 		</a><br>
 
