Voyager Events Unveiling

--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
 		  <p>
 		    Flagship event of IEEE-VIT.
 		    <br><br>
-		    Unveiling the events soon!! Stay Tuned.<br><br>
-		    <!--<a class='btn' href="launch.html"><i class="fa fa-rocket" aria-hidden="true"></i> Launch</a>-->
-		    <button type="button" class="btn btn-secondary btn-lg" disabled><i class="fa fa-rocket" aria-hidden="true"></i></button>
+		    <a class='btn' href="launch.html"><i class="fa fa-rocket" aria-hidden="true"></i> Launch</a>
 		  </p>		    
 	</div>
 	<div class='solar-syst'>
