--- a/fun-events/index.html
+++ b/fun-events/index.html
@@ -74,7 +74,7 @@
                     <div class="carousel-caption">
                         <h2 class="animated bounceInRight" style="animation-delay: 1s"> The <span>Webseries Quiz</span></h2>
                         <h3 class="animated bounceInLeft" style="animation-delay: 2s">Participants have to answer questions based on famous webseries within a time limit.</h3>
-                        <p class="animated bounceInRight" style="animation-delay: 3s"><a href="#">Register Here</a></p>
+                        <p class="animated bounceInRight" style="animation-delay: 3s"><a href="http://bit.ly/Voyager21_WebSeriesQuiz">Register Here</a></p>
                     </div>
                 </div>
                 <div class="item">
