--- a/competitions/main.html
+++ b/competitions/main.html
@@ -102,7 +102,7 @@
     <div class="back">
       <div class="social-media-wrapper">
 
-  <p class="social-icon">Participants are porvided with a faulty circuit and buggy code. The goal is to debug and simulate the circuit.</p>
+  <p class="social-icon">Participants are provided with a faulty circuit and buggy code. The goal is to debug and simulate the circuit.</p>
   <a href="#" class="btn btn-secondary btn-sm">Register Here</a>
       </div>
     </div>
