Updated Webinar Registration link and Schedule

--- a/techtalk/index.html
+++ b/techtalk/index.html
@@ -65,7 +65,8 @@
   <div id="textbois">
     <h3>Hitesh Hinduja</h3>
     <h5>Datascientist at Ola Electric</h5>
-    <a href="#">Register Here</a>
+    <h5>Topic: Machine Learning Interpretation</h5>
+    <a href="http://bit.ly/MLInterpretation_Voyager21">Register Here</a>
         <div id="hotlinks">
       <a href="https://www.linkedin.com/mwlite/in/hitesh-hinduja-501820117">
         <img id="linkedin" src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-linkedin-circle-512.png" target="_blank"></img>
@@ -82,6 +83,7 @@
   <div id="textbois">
     <h3>Rahul Sasi</h3>
     <h5>Founder of CloudSEK</h5>
+    <h5>Topic: Cybersecurity</h5>
     <a href="#">Register Here</a>
     <div id="hotlinks">
       <a href="https://www.linkedin.com/in/fb1h2s?originalSubdomain=in">
