Responsive Bug Fixes

--- a/techtalk/index.html
+++ b/techtalk/index.html
@@ -65,7 +65,7 @@
   <div id="textbois">
     <h3>Hitesh Hinduja</h3>
     <h5>Datascientist at Ola Electric</h5>
-    <h5>Topic: Machine Learning Interpretation</h5>
+    <h5>Topic: ML Interpretation</h5>
     <a href="http://bit.ly/MLInterpretation_Voyager21">Register Here</a>
         <div id="hotlinks">
       <a href="https://www.linkedin.com/mwlite/in/hitesh-hinduja-501820117">
