Added Cybersecurity Talk Registration Link

--- a/techtalk/index.html
+++ b/techtalk/index.html
@@ -84,7 +84,7 @@
     <h3>Rahul Sasi</h3>
     <h5>Founder of CloudSEK</h5>
     <h5>Topic: Cybersecurity</h5>
-    <a href="#">Register Here</a>
+    <a href="http://bit.ly/CyberSecurity_Voyager21">Register Here</a>
     <div id="hotlinks">
       <a href="https://www.linkedin.com/in/fb1h2s?originalSubdomain=in">
         <img id="linkedin" src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-linkedin-circle-512.png" target="_blank"></img>
