--- a/fun-events/index.html
+++ b/fun-events/index.html
@@ -82,7 +82,7 @@
                     <div class="carousel-caption">
                         <h2 class="animated slideInDown" style="animation-delay: 1s">Wriggle <span>Skribbl</span></h2>
                         <h3 class="animated fadeInUp" style="animation-delay: 2s">Participants have to draw an object and other participants have to guess within a time limit.</h3>
-                        <p class="animated zoomIn" style="animation-delay: 3s"><a href="#">Register Here</a></p>
+                        <p class="animated zoomIn" style="animation-delay: 3s"><a href="http://bit.ly/Skribble_Voyager21">Register Here</a></p>
                     </div>
                 </div>
 
