Updated with registration link

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -58,14 +58,14 @@
   
       <div class="carousel-item" id="c2"> 
          <div class="carousel-caption"> 
-       <h3 class="display-5"><b>TinkerCad Workshop</b></h3> 
+       <h3 class="display-5"><b>Home Automation Workshop</b></h3> 
        <h5 class="tagline">Make a Home Automation System Using TinkerCad</h5> 
        <br> 
        <a href="#myModal2" role="button" class="button" data-toggle="modal">MORE DETAILS</a> 
        <br> 
        <br> 
        <br> 
-       <a href="#" class="button">REGISTER</a> 
+       <a href="http://bit.ly/HomeAutomationWorkshop_Voyager2021" class="button">REGISTER</a> 
        <br> 
        <br> 
       </div> 
