Added Shark Tank Registration Link

--- a/competitions/main.html
+++ b/competitions/main.html
@@ -125,7 +125,7 @@
       <div class="social-media-wrapper">
         
   <p class="social-icon"> Shark Tank event is to encourage and motivate young students who aspire to become entrepreneurs. Each team will be given a sector in the form of a problem statement in which they have to build an entire startup model.</p>
-  <a href="#" class="btn btn-secondary btn-sm">Register Here</a>
+  <a href="http://bit.ly/SharkTank_Voyager2021" class="btn btn-secondary btn-sm">Register Here</a>
       </div>
     </div>
 
