Updated P5Js Registration Link

--- a/workshops/index.html
+++ b/workshops/index.html
@@ -50,7 +50,7 @@
        <a href="#myModal1" role="button" class="button" data-toggle="modal">MORE DETAILS</a>
        <br> 
        <br> 
-       <a href="#" class="button">REGISTER</a> 
+       <a href="http://bit.ly/P5JS_Voyager2021" class="button">REGISTER</a> 
        <br> 
        <br> 
       </div> 
