Added TYC Registration Link

--- a/competitions/main.html
+++ b/competitions/main.html
@@ -103,7 +103,7 @@
       <div class="social-media-wrapper">
 
   <p class="social-icon">Participants are provided with a faulty circuit and buggy code. The goal is to debug and simulate the circuit.</p>
-  <a href="#" class="btn btn-secondary btn-sm">Register Here</a>
+  <a href="http://bit.ly/TinkerYourCircuit_Voyager2021" class="btn btn-secondary btn-sm">Register Here</a>
       </div>
     </div>
 
