Added CodeAger Registration Link

--- a/competitions/main.html
+++ b/competitions/main.html
@@ -147,7 +147,7 @@
       <div class="social-media-wrapper">
          
   <p class="social-icon">Competitve Programming Competition.</p>
-  <a href="#" class="btn btn-secondary btn-sm">Register Here</a>
+  <a href="http://bit.ly/Codeager_Voyager2021" class="btn btn-secondary btn-sm">Register Here</a>
       </div>
     </div>
 
