--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" href="favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description"
+    content="Voyager is an expedition to the realm of cutting edge technology. An amalgamation of competitions, tech-talks, workshops and enchanting fun events. voyager aims to weave creativity, learning and knowledge, in a bit to unleash ideas that transcend notions and limits." />
   <link rel="apple-touch-icon" href="favicon.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
