--- a/index.html
+++ b/index.html
@@ -1,1 +1,162 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="favicon.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Voyager is an expedition to the realm of cutting edge technology. An amalgamation of competitions, tech-talks, workshops and enchanting fun events. voyager aims to weave creativity, learning and knowledge, in a bit to unleash ideas that transcend notions and limits."/><link rel="apple-touch-icon" href="favicon.png"/><link rel="manifest" href="manifest.json"/><title>Voyager 2023</title><script defer="defer" src="/static/js/main.a02e05d4.js"></script><link href="/static/css/main.e2099d91.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+  <head>
+    <title>Voyager 2024</title>
+    <meta name="description" content="Voyager 2024">
+    <meta name="theme-color" content="#00629B">
+    <meta name="viewport" content="width=device-width" >
+    <meta charset="UTF-8" >
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900,400italic,700italic,900italic%7CDroid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.lineicons.com/4.0/lineicons.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" media="screen" >
+    <link rel="icon" href="/icons/favicon-512.png" type="image/png">
+    <link rel="manifest" href="manifest.json" type="application/json">
+  </head>
+  <!-- Ver. 2.0 
+    Author: Arnav Dandekar-->
+<body>
+  <canvas id='c'></canvas>
+  <div class="head">
+    <div id="menu">
+      <div id="menu-bar" onclick="menuOnClick()">
+        <div id="bar1" class="bar"></div>
+        <div id="bar2" class="bar"></div>
+        <div id="bar3" class="bar"></div>
+      </div>
+      <nav class="nav" id="nav">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#footer">Social</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="https://www.ieee.org/membership/join/index.html">Membership</a></li>
+        </ul>
+      </nav> 
+    </div>
+
+    <form>
+      <label class="switch">
+      <input type="checkbox" id="mode-toggle"/>
+      <span class="slider"></span>
+    </label>
+    </form>
+    
+    <div class="menu-bg" id="menu-bg"></div>
+    <div class="headerobjectswrapper">
+
+      <a href="/">
+      <header id="header">VOYAGER</header>
+      </a>
+    <div class="subhead">
+      <button id="btn" class="ribbon">About</button>
+      <a class="ribbon" target="_blank" href="https://iris.vit.edu.in">IRIS</a>
+      <a class="ribbon" target="_blank" href="https://ieee.vit.edu.in">IEEE-VIT</a>
+      <a class="ribbon" href="#">Register</a>
+    </div>
+  </div>
+  </div>
+  <div class="new-content">
+    <section class="new-sect" id="time">
+      <div class="clock">
+        <section class="days">
+            <div class="tens">
+                <p>0</p><p>1</p><p>2</p><p>3</p><p>4</p><p>5</p><p>6</p><p>7</p><p>8</p><p>9</p>
+            </div>
+            <div class="ones">
+                <p>0</p><p>1</p><p>2</p><p>3</p><p>4</p><p>5</p><p>6</p><p>7</p><p>8</p><p>9</p>
+            </div>
+        </section>
+        <p class="separator">:</p>
+        <section class="hours">
+            <div class="tens">
+                <p>0</p><p>1</p><p>2</p><p>3</p><p>4</p><p>5</p><p>6</p><p>7</p><p>8</p><p>9</p>
+            </div>
+            <div class="ones">
+                <p>0</p><p>1</p><p>2</p><p>3</p><p>4</p><p>5</p><p>6</p><p>7</p><p>8</p><p>9</p>
+            </div>
+        </section>
+        <p class="separator">:</p>
+        <section class="mins">
+            <div class="tens">
+                <p>0</p><p>1</p><p>2</p><p>3</p><p>4</p><p>5</p><p>6</p><p>7</p><p>8</p><p>9</p>
+            </div>
+            <div class="ones">
+                <p>0</p><p>1</p><p>2</p><p>3</p><p>4</p><p>5</p><p>6</p><p>7</p><p>8</p><p>9</p>
+            </div>
+        </section>
+        <p class="separator">:</p>
+        <section class="secs">
+            <div class="tens">
+                <p>0</p><p>1</p><p>2</p><p>3</p><p>4</p><p>5</p><p>6</p><p>7</p><p>8</p><p>9</p>
+            </div>
+            <div class="ones">
+                <p>0</p><p>1</p><p>2</p><p>3</p><p>4</p><p>5</p><p>6</p><p>7</p><p>8</p><p>9</p>
+            </div>
+        </section>
+    </div>
+    </section>
+    <section class="new-sect events">
+      <h2 class="sect-head">Events</h2>
+      <!--<div class="ev-img">
+        <h3 class="pad">Event 1</h3>
+        <p class="para sans">Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words</p>
+        <p class="para sans">Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words</p>
+      </div>
+      <div class="ev-img">
+        <h3 class="pad">Event 2</h3>
+        <p class="para sans">Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words</p>
+        <p class="para sans">Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words</p>
+      </div>
+      <div class="ev-img">
+        <h3 class="pad">Event 3</h3>
+        <p class="para sans">Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words</p>
+        <p class="para sans">Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words Words words words</p>
+      </div>-->
+    </section>
+    <section class="new-sect">
+      <h2 class="sect-head">Speakers</h2>
+      <!--<div class="speak">
+        <div class="upflex">
+          <img class="sp-image" src="/icons/default.png" alt="">
+          <caption>Speaker 1</caption>
+          <p class="sans">words words words</p>
+        </div>
+        <div class="upflex">
+          <img class="sp-image" src="/icons/default.png" alt="">
+          <caption>Speaker 2</caption>
+          <p class="sans">words words words</p>
+        </div>
+        <div class="upflex">
+          <img class="sp-image" src="/icons/default.png" alt="">
+          <caption>Speaker 3</caption>
+          <p class="sans">words words words</p>
+        </div>
+    </div>-->
+    </section>
+    <section class="new-sect">
+      <h2 class="sect-head">Schedule</h2>
+    </section>
+    <section class="new-sect contact-sect">
+      <h2 id="contact" class="sect-head">Contact</h2>
+      <a href="mailto:vidyalankarieee@gmail.com" class="ribbon">vidyalankarieee@gmail.com</a><br><br>
+      <p>Chairperson: +91 9137540673</p>
+      <p>Vice-Chairperson: +91 9082296163</p>
+      <p>General Secretary: +91 8779909604</p>
+    </section>
+    <div id="footer">
+      <span>© 2.24 IEEE-VIT</span>
+      <a target="_blank" href="https://instagram.com/ieeevit"><i class="lni lni-instagram-original"></i></a>
+      <a target="_blank" href="https://linkedin.com/company/ieee-vit"><i class="lni lni-linkedin-original"></i></a>
+      <a target="_blank" href="https://github.com/ieeevidyalankar"><i class="lni lni-github-original"></i></a>
+    </div>
+  </div>
+  <div id="modal" class="modal animate__animated animate__slideInDown animate__faster">
+    <div class="modal-content">
+      <span class="close">&times;</span><br><br>
+      <p>Voyager is an expedition to the realm of cutting edge technology. An amalgamation of competitions, tech-talks, workshops and enchanting fun events. voyager aims to weave creativity, learning and knowledge, in a bit to unleash ideas that transcend notions and limits.</p>
+    </div>
+  </div>
+  <script src="js/background.js" async></script>
+  <script src="js/time.js" async></script>
+</body>
+</html>
