--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             </div>
         </section>
     </div>
+    <a class="reel" href="https://www.instagram.com/reel/C4TJy3jPKDe/?igsh=MTVvdjA4YW5peHZ4ag==" target="_blank">Enter a journey through the stars</a>
     </section>
     <section class="new-sect events">
       <h2 class="sect-head">Events</h2>
